# graph-renderer-openGL

./: .gitignore  .gitmodules  CMakeLists.txt
res/shaders/: basic.frag.glsl  basic.vert.glsl
src/: camera.hpp  constants.hpp  gl_utils.hpp  gui.hpp  main.cpp  mesh.cpp  mesh.hpp  meshutils.cpp  meshutils.hpp  shader.hpp  texture.cpp  texture.hpp
src/app/: app.cpp  app.hpp
src/core/: constants.hpp  gl_includes.hpp
src/core/gl_utils/: gl_utils.cpp  gl_utils.hpp
src/core/shader/: shader.cpp  shader.hpp
src/core/texture/: texture.cpp  texture.hpp
src/engine/camera/: camera.cpp  camera.hpp
src/engine/mesh/: mesh.cpp  mesh.hpp
src/engine/mesh_utils/: meshutils.cpp  meshutils.hpp
src/graph/: function_library.cpp  function_library.hpp  graph.cpp  graph.hpp
src/gui/: gui.cpp  gui.hpp
src/renderer/: renderer.cpp  renderer.hpp
